Tested the quantity is 0 using different quantities of existing inventory instead.  Sold out label works.

--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -56,7 +56,7 @@ main section.categories-show {
         top: 0;
         left: 0;
         padding: 10px;
-        background-color: #800000;
+        background-color: #a94442;
         border-bottom-right-radius: 20px;
         border-top-left-radius: 4px;
         font-size: 0.8em;
