--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -21,7 +21,9 @@
     <%= humanized_money_with_symbol product.price %>
   </aside>
 
-  <aside class="soldout">
-    SOLD OUT!
-  </aside>
+  <% if product.quantity == 0 %>
+    <aside class="soldout">
+      SOLD OUT!
+    </aside>
+  <% end %>
 </article>
