--- a/app/views/admin/dashboard/show.html.erb
+++ b/app/views/admin/dashboard/show.html.erb
@@ -1,2 +1,34 @@
-<h1>Admin::Dashboard#show</h1>
-<p>Find me in app/views/admin/dashboard/show.html.erb</p>
+<section class="dashboard-show">
+
+  <header class="page-header">
+  <h1>Dashboard</h1>
+  </header>
+  
+  <div class="alert alert-info" role="alert">
+    <table class="table table-bordered">
+      <thead>
+        <tr>  
+          <th colspan="2">Metrics Summary</th>
+          <th>Value</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>Number of</td>
+          <td>Products</td>
+          <td><%= @product_count %></td>
+        </tr>
+        <tr>
+          <td>Number of</td>
+          <td>Categories</td>
+          <td><%= @category_count %></td>
+        </tr>
+        </tbody>
+      <tfoot>
+      <tr>
+        <th colspan="3">Last Updated at <%= @updated_at %></th>
+      </tr>
+      </tfoot>
+    </table>
+  </div>
+</section>
