Added date and time on when the query for all categories and all products were made to their respective pages

--- a/app/views/admin/categories/index.html.erb
+++ b/app/views/admin/categories/index.html.erb
@@ -2,7 +2,7 @@
 
   <header class="page-header">
     <h1>Admin &raquo; All Categories</h1>
-    <h4>Last updated at <%= @updated_at %></h4>
+    <h4>Queried at <%= @queried_at %></h4>
   </header>
 
   <div class="well">
