--- a/app/views/admin/products/index.html.erb
+++ b/app/views/admin/products/index.html.erb
@@ -2,6 +2,7 @@
 
   <header class="page-header">
     <h1>Admin &raquo; All Products</h1>
+    <h4>Queried at <%= @queried_at %></h4>
   </header>
 
   <div class="well">
