--- a/app/views/layouts/_top_nav.html.erb
+++ b/app/views/layouts/_top_nav.html.erb
@@ -40,6 +40,8 @@
             <li><%= link_to 'Products',  [:admin, :products] %></li>
           </ul>
         </li>
+        <li><%= link_to 'Sign up',  [:signup] %></li> 
+        <li><%= link_to 'Login',  [:login] %></li> 
         <li>
           <%= link_to cart_path do %>
             <%= fa_icon "shopping-cart" %> My Cart (<%= cart.size %>)
