--- a/app/views/layouts/_top_nav.html.erb
+++ b/app/views/layouts/_top_nav.html.erb
@@ -28,18 +28,20 @@
         </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
-       <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+        <% if !session[:user_id] %>
+          <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
 
-            <span class="text-danger"><%= fa_icon 'lock', text: 'Admin' %></span>
-            <span class="caret"></span>
-          </a>
-          <ul class="dropdown-menu">
-            <li><%= link_to 'Dashboard', [:admin, :root] %></li>
-            <li><%= link_to 'Categories',  [:admin, :categories] %></li>
-            <li><%= link_to 'Products',  [:admin, :products] %></li>
-          </ul>
-        </li>
+                <span class="text-danger"><%= fa_icon 'lock', text: 'Admin' %></span>
+                <span class="caret"></span>
+              </a>
+              <ul class="dropdown-menu">
+                <li><%= link_to 'Dashboard', [:admin, :root] %></li>
+                <li><%= link_to 'Categories',  [:admin, :categories] %></li>
+                <li><%= link_to 'Products',  [:admin, :products] %></li>
+              </ul>
+            </li>
+        <% end %>
         <% if !session[:user_id] %>
           <li><%= link_to 'Come into the Jungle',  [:arrival] %></li> 
         <% else %>
