--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,19 +1,25 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>Jungle</title>
-  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
-  <%= csrf_meta_tags %>
-</head>
-<body>
+  <head>
+    <title>Jungle</title>
+    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
+    <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+    <%= csrf_meta_tags %>
+  </head>
+  <body>
 
-  <%= render 'layouts/top_nav' %>
+    <%= render 'layouts/top_nav' %>
 
-  <main class="container">
-    <%= yield %>
-  </main>
+    <main class="container">
+      <% if active_sales? %>
+        <% active_sale.each do |s| %>
+          <%= render 'layouts/active_sale', s: s %>
+        <% end %>
+      <% end %>
 
-  <%= yield :end_of_body %>
-</body>
+      <%= yield %>
+    </main>
+
+    <%= yield :end_of_body %>
+  </body>
 </html>
