--- a/app/views/layouts/_top_nav.html.erb
+++ b/app/views/layouts/_top_nav.html.erb
@@ -56,7 +56,7 @@
             <% if !session[:user_id] %>
               <%= fa_icon "shopping-cart" %> My cart (<%= cart.size %>)
             <% else %>
-              <%= fa_icon "shopping-cart" %> <%= current_user.first_name  %>'s' cart has <%= pluralize(cart.size, 'product') %>
+              <%= fa_icon "shopping-cart" %> <%= current_user.first_name  %>'s cart has <%= pluralize(cart.size, 'product') %>
             <% end %>
           <% end %>
         </li>
