--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -21,7 +21,7 @@
     <%= humanized_money_with_symbol product.price %>
   </aside>
 
-  <% if product.quantity == 0 %>
+  <% if !product.has_stock? %>
     <aside class="soldout">
       SOLD OUT!
     </aside>
